Closed Bug 135538 Opened 24 years ago Closed 24 years ago

No transliteration fallback for message headers and plain text body.

Categories

(MailNews Core :: Internationalization, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: nhottanscp, Assigned: nhottanscp)

Details

(Keywords: regression, Whiteboard: [adt2])

Attachments

(1 file)

http://www.mozilla.org/quality/intl/tests/data/mailsmoketest.zip 1) Reply to the last message of the intl smoketest data. 2) Two alerts will come up hit OK for both. 3) Received the mail, Euro sign in the header and the body turn to a question mark. Expected result: the Euro sign is transliterated to "EUR".
This is caused by setting an wrong option to nsISaveAsCharset caused by my check in for bug 125077. Nominating for nsbeta1, we need transliteration for message headers and plain text body.
Status: NEW → ASSIGNED
Keywords: nsbeta1, regression
Target Milestone: --- → mozilla1.0
Impact Platform: ALL Impact language users: ALL (people who will send out euro sign ) 560M 100% of internet users Probability of hitting the problem: HIGH, when users send out euro sign in mail subject or plain text mail body. Severity if hit the problem in the worst case: see ? mark instead EUR for euro sign and make cause bad interpretation of fincial decision Risk of the fix: LOW, only impact sending mail of message header and plain text body. the patch basically back up what we used to use in n6.2. Potential benefit: Fix other characters like TM sign will be send out as "TM" also smart quote will convert right
Keywords: nsbeta1nsbeta1+
Whiteboard: adt2
does this fix has any effect on bug 109342?
Keywords: nsbeta1+nsbeta1
Whiteboard: adt2
>does this fix has any effect on bug 109342? No, that bug is about changing a charset to something else for Euro sign (i.e. not a workaround of this bug). This bug, the problem is that it is sent as a question mark. And this bug is not for Euro only, other symbols like trade mark, smart quotes also turn to question marks.
this is a adt2 bug
Whiteboard: adt2
Comment on attachment 77737 [details] [diff] [review] Use the correct attribute for transliteration. 'transliterate' is an attribute of nsIEntityConverter, so attr_EntityNone will skip transliteration at all. R=ducarroz
Attachment #77737 - Flags: review+
Keywords: nsbeta1nsbeta1+
Comment on attachment 77737 [details] [diff] [review] Use the correct attribute for transliteration. 'transliterate' is an attribute of nsIEntityConverter, so attr_EntityNone will skip transliteration at all. sr=sspitzer
Attachment #77737 - Flags: superreview+
adt1.0.0 low risk fix for high sensentive issue.
Keywords: adt1.0.0
Comment on attachment 77737 [details] [diff] [review] Use the correct attribute for transliteration. 'transliterate' is an attribute of nsIEntityConverter, so attr_EntityNone will skip transliteration at all. a=asa (on behalf of drivers) for checkin to the 1.0 trunk
Attachment #77737 - Flags: approval+
the suggest change was in the tree before feb 19, 2002
Whiteboard: adt2 → [adt2]
adt1.0.0+ (on ADT's behalf) approval for checkin to 1.0.
Keywords: adt1.0.0adt1.0.0+
checked in to the trunk
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Verified with 06/18 trunk build.
Status: RESOLVED → VERIFIED
QA Contact: ji → marina
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: