Use the correct attribute for transliteration. 'transliterate' is an attribute of nsIEntityConverter, need to use 'attr_EntityAfterCharsetConv', 'attr_EntityNone' skips transliteration at all, bug 135538, r=ducarroz, sr=sspitzer, a=asa, adt.